--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8000:8000"
     volumes:
       - ./backend/models:/app/models
+      - ./data:/app/data
     networks:
       - fraud-net
 
